# brainrot-plus

./: README.md  pyproject.toml
backend/: .gitignore  audio_service.py  config.py  environment.yml  llm_service.py  main.py  pyproject.toml  text_service.py  video_service.py
backend/googleimages_service/: GoogleImageScraper.py  main.py  patch.py
backend/services/: audio_service.py  image_service.py  llm_service.py  text_service.py  video_service.py
frontend/: components.json  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/: footer.tsx  reels.tsx  test_swiper.tsx
frontend/src/components/ui/: calendar.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  menubar.tsx  progress.tsx  radio-group.tsx  sheet.tsx  slider.tsx  tabs.tsx
